tests/error/addInteger-wrong-2nd-argument-data.uplc
(program 1.0.0[[(builtin addInteger)(con integer 10)](con data {ByteString #AFD3})])